# rust-DRG-Save-Editor

./: Cargo.toml  README.md  git-v1.sh  index.html
assets/: sw.js
res/: level-info.toml  resource-guids.toml  season-info.toml  weapon-overclocks.toml
src/: main.rs
src/lib/: app.rs  mod.rs
src/lib/gui/: mod.rs
src/lib/gui/widgets/: mod.rs  val_text.rs
src/lib/resources/: level_info.rs  mod.rs  resource_guids.rs  season_info.rs  weapon_overclocks.rs
src/lib/save_file_utils/: data.rs  mod.rs
src/lib/save_file_utils/deserializer/: mod.rs
src/lib/save_file_utils/serializer/: mod.rs
src/lib/widgets/: val_text.rs
